[gd_scene load_steps=7 format=2]

[ext_resource path="res://Tile/Tree.gd" type="Script" id=1]
[ext_resource path="res://asset/textures/Trees/tree1.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
void fragment()
{
	COLOR = vec4(0.0,0.0,0.0,0.0);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "down"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}

[node name="Tree" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.700256, 1.00719 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5.38864, 1.79621 )
texture = ExtResource( 2 )
offset = Vector2( 0, -80 )

[node name="Button" type="Button" parent="."]
material = SubResource( 3 )
margin_left = -10.0
margin_top = -41.0
margin_right = 7.0
margin_bottom = 9.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/down = SubResource( 4 )

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -43.0
margin_top = 16.0
margin_right = 43.0
margin_bottom = 30.0
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
